--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "develop": "concurrently \"npm run server\" \"npm run client\""
+    "develop": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Stephen Riding",
   "license": "MIT",
@@ -21,5 +22,8 @@
   "devDependencies": {
     "dotenv": "^6.2.0",
     "nodemon": "^1.18.10"
+  },
+  "engine": {
+    "node": "10.x"
   }
 }
