--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "movies_for_everyone_client",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "http-proxy-middleware": "^0.19.1",
