--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,11 +1,10 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Movie Search",
+  "name": "MoviesForEveryone - Search for movies!",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "moviesforeveryone-favicon.png",
+      "sizes": "32x32"
     }
   ],
   "start_url": ".",
